@@ -25,9 +25,6 @@ m4_define([[sl_anonymous]], [[m4_step([[_sl_anonct]])[[__slanon]]_sl_anonct]])
 # non-empty
 m4_define([[sl_breakable]],[[m4_case([[$1]],[[void]],0,[[]],0,1)]])
 
-# restrict: enable C99 keyword
-m4_define([[restrict]], [[__restrict__]])
-
 # load implementation-specific definitions
 m4_include([[slimpl.m4]])
 
